# mdos

./: .gitignore  Makefile.toml  README.md
imggen/: Cargo.toml  README.md
imggen/src/: main.rs
kernel/: Cargo.toml  README.md
kernel/.cargo/: config.toml
kernel/src/: kernel_main.rs  lang_features.rs  main.rs
kernel/src/gdt/: mod.rs  tss.rs
kernel/src/idt/: breakpoint.rs  double_fault.rs  mod.rs  timer_interrupt.rs
kernel/src/interrupts/: interrupt_index.rs  mod.rs
kernel/src/utility/: boot_info.rs  framebufferwriter.rs  mod.rs  print.rs
